--- a/sample extension/popup.html
+++ b/sample extension/popup.html
@@ -6,6 +6,7 @@
   <body>
     <h1>Test extensions</h1>
     <button id="checkPage">Click here!</button>
+    <p id = "topStocks"></p>
     <script src="popup.js"></script>
   </body>
 </html>
