Latest news to extension

--- a/sample extension/popup.html
+++ b/sample extension/popup.html
@@ -7,6 +7,7 @@
     <h1>Test extensions</h1>
     <button id="checkPage">Click here!</button>
     <p id = "topStocks"></p>
+    <p id = "stockNews"></p>
     <script src="popup.js"></script>
   </body>
 </html>
