--- a/sample extension/popup.html
+++ b/sample extension/popup.html
@@ -1,13 +1,78 @@
 <!doctype html>
 <html>
   <head>
+    <style>
+      .button {
+        border: none;
+        color: white;
+        padding: 16px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        /* margin: 4px 2px; */
+        transition-duration: 0.4s;
+        cursor: pointer;
+        align: center;
+        margin:0 auto;
+      }
+
+      .button1 {
+        background-color: white;
+        color: black;
+        border: 2px solid #228B22	;
+        text-align: center;
+      }
+
+      .button1:hover {
+        background-color: #228B22	;
+        color: white;
+      }
+
+      .button2 {
+        background-color: white;
+        color: black;
+        border: 2px solid #6495ED;
+        text-align: center;
+      }
+
+      h1 {
+        font-family: 'Trebuchet MS', sans-serif;
+        font-weight: bold;
+        font-size: 30px;
+        color: #228B22;
+        text-align: center;
+      }
+
+      body {
+        width: 400px; /* your desired width */
+        /* max-width: 100%; */
+        height: 600px;
+        position: relative;
+        vertical-align:middle;
+        background-color: #FFFFE0	;
+      }
+
+      .footer {
+        background-color: #CCCCFF;
+        margin-bottom: auto;
+      }
+
+
+    </style>
     <title>lets analyse the page!</title>
   </head>
   <body>
-    <h1>Test extensions</h1>
-    <button id="checkPage">Click here!</button>
+    <h1>TopStocks</h1>
+    <button class="button button1" id="checkPage">Refresh Stocks!</button>
     <p id = "topStocks"></p>
     <p id = "stockNews"></p>
+    <button class="button button2" id="checkPage">Show Visualizations!</button>
     <script src="popup.js"></script>
+
+    <footer>
+      <!-- this can link the user to the chrome extension settings page -->
+      <!-- <p>Settings</p> -->
+    </footer>
   </body>
 </html>
