--- a/sample extension/popup.html
+++ b/sample extension/popup.html
@@ -65,6 +65,7 @@
   <body>
     <h1>TopStocks</h1>
     <button class="button button1" id="checkPage">Refresh Stocks!</button>
+    <p id = "specificStock"></p>
     <p id = "topStocks"></p>
     <p id = "stockNews"></p>
     <button class="button button2" id="checkPage">Show Visualizations!</button>
