--- a/sample extension/popup.html
+++ b/sample extension/popup.html
@@ -58,6 +58,25 @@
         margin-bottom: auto;
       }
 
+      /* make the pandas dataframe look nicer */
+      .mystyle {
+          font-size: 12pt;
+          font-family: Arial;
+          /* border-collapse: collapse; */
+          border: 1px solid silver;
+          margin-left: 10px;
+
+      }
+
+      .mystyle td, th {
+          padding: 5px;
+          padding-left: 5px;
+      }
+
+      .tr {
+        text-align: center;
+      }
+
 
     </style>
     <title>lets analyse the page!</title>
@@ -66,9 +85,11 @@
     <h1>TopStocks</h1>
     <button class="button button1" id="checkPage">Refresh Stocks!</button>
     <p id = "specificStock"></p>
+    <p id = "sentiment"></p>
     <p id = "topStocks"></p>
     <p id = "stockNews"></p>
-    <button class="button button2" id="checkPage">Show Visualizations!</button>
+    <p id = "visualize"></p>
+    <!-- <button class="button button2" id="checkPage">Show Visualizations!</button> -->
     <script src="popup.js"></script>
 
     <footer>
