--- a/sample extension/popup.html
+++ b/sample extension/popup.html
@@ -60,7 +60,7 @@
 
       /* make the pandas dataframe look nicer */
       .mystyle {
-          font-size: 12pt;
+          font-size: 20pt;
           font-family: Arial;
           /* border-collapse: collapse; */
           border: 1px solid silver;
@@ -75,6 +75,31 @@
 
       .tr {
         text-align: center;
+      }
+
+      .styled-table {
+        border-collapse: collapse;
+        margin: 10px 0;
+        font-size: 0.9em;
+        font-family: sans-serif;
+        min-width: 400px;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+      }
+
+      .styled-table thead tr {
+        background-color: #009879;
+        color: #ffffff;
+        text-align: left;
+      }
+
+      .styled-table th,
+      .styled-table td {
+            padding: 12px 15px;
+      }
+
+      .styled-table tbody tr.active-row {
+        font-weight: bold;
+        color: #009879;
       }
 
 
