update sentiment analysis

--- a/sample extension/popup.html
+++ b/sample extension/popup.html
@@ -111,6 +111,8 @@
     <button class="button button1" id="checkPage">Refresh Stocks!</button>
     <p id = "specificStock"></p>
     <p id = "sentiment"></p>
+
+    <h2>Top Stocks for Today:</h2>
     <p id = "topStocks"></p>
     <p id = "stockNews"></p>
     <p id = "visualize"></p>
