--- a/sample_extension/popup.html
+++ b/sample_extension/popup.html
@@ -10,7 +10,6 @@
         text-decoration: none;
         display: inline-block;
         font-size: 16px;
-        /* margin: 4px 2px; */
         transition-duration: 0.4s;
         cursor: pointer;
         align: center;
@@ -45,8 +44,7 @@
       }
 
       body {
-        width: 400px; /* your desired width */
-        /* max-width: 100%; */
+        width: 400px;
         height: 600px;
         position: relative;
         vertical-align:middle;
@@ -58,7 +56,6 @@
       .mystyle {
           font-size: 20pt;
           font-family: Arial;
-          /* border-collapse: collapse; */
           border: 1px solid silver;
           margin-left: 10px;
 
@@ -98,32 +95,22 @@
         color: #009879;
       }
 
-
     </style>
-    <title>lets analyse the page!</title>
+    <title>lets analyse stocks!</title>
   </head>
   <body>
     <h1>TopStocks</h1>
     <button class="button button1" id="checkPage">Refresh Stocks!</button>
     <p id = "specificStock"></p>
     <p id = "sentiment"></p>
-
     <h2>Top Stocks for Today:</h2>
     <p id = "topStocks"></p>
     <p id = "visualize"></p>
     <img id="graph" src="topstocks.png" style="display:none; max-width: 96%" />
-
     <p id = "stockNews"></p>
     <p id = "visualize1"></p>
     <img id="graph1" src="sentimentgraph.png" style="display:none; max-width: 96%" />
 
-    <!-- <img src="topstocks.png"> -->
-    <!-- <button class="button button2" id="checkPage">Show Visualizations!</button> -->
     <script src="popup.js"></script>
-
-    <footer>
-      <!-- this can link the user to the chrome extension settings page -->
-      <!-- <p>Settings</p> -->
-    </footer>
   </body>
 </html>
